--- a/styles/lazy-styles.css
+++ b/styles/lazy-styles.css
@@ -85,12 +85,12 @@ main .product-category-section {
 }
 
 main .product-category-section h2 {
-  color: #2b2b2b;
+  color: var(--text-color);
   text-align: left;
-  font-size: 28px;
-  font-weight: 700;
+  font-size: 16px;
+  font-weight: 400;
   margin: 0;
-  padding: 48px 64px 24px;
+  padding: 0 64px 24px;
 }
 
 main .product-category-section .cards-thumbnail-wrapper {
@@ -193,8 +193,8 @@ main .product-category-section .cards-thumbnail .cards-thumbnail-card-body a.but
   }
 
   main .product-category-section h2 {
-    padding: 32px 16px 16px;
-    font-size: 22px;
+    padding: 0 16px 16px;
+    font-size: 16px;
   }
 
   main .product-category-section .cards-thumbnail-wrapper {
